# MyStickCounterBot

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: master.yml
mystickcounterbot/: config.py  main.py
mystickcounterbot/commands/: __init__.py  actions.py  add.py  goal.py  price.py  remove.py  stats.py
mystickcounterbot/databases/: mongo.py
mystickcounterbot/models/: callback.py  data.py  messages.py
